# fastapi-blog

./: .env.development  .env.production  .gitignore  AGENTS.md  README.md  alembic.ini  main.py  pyproject.toml
.agents/skills/fastapi-blog-development/: SKILL.md
.agents/skills/fastapi-blog-development/agents/: openai.yaml
.agents/skills/fastapi-blog-development/references/: project-context.md  workflows.md
app/: __init__.py  cli.py  main.py  templating.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py
app/dependencies/: __init__.py  auth.py
app/models/: post.py  user.py
app/routers/: __init__.py  api_auth.py  api_posts.py  api_users.py  pages.py
app/schemas/: __init__.py  auth.py  post.py  upload.py  user.py
app/services/: auth.py  images.py  posts.py  users.py
app/static/css/: site.css
app/static/js/: api.js  auth.js  forms.js  posts.js  theme.js
app/templates/: home.html  layout.html  login.html  post.html  post_form.html  profile.html  register.html
apps/schemas/: __init__.py
apps/static/css/: site.css
apps/templates/: error.html  home.html  post.html
docs/: JWT与用户认证开发流程.md  VSCode调试JWT管理员链路.md  同步与异步开发指南.md  开发流程.md  数据库设计.md  数据库迁移与常用操作.md  环境配置.md  用户接口.md
migrations/: env.py
migrations/versions/: 20260722_01_create_users_table.py  f9892737bfc8_create_posts_table.py
tests/: conftest.py  test_auth.py  test_cli.py  test_pages.py  test_posts.py  test_posts_api.py  test_users.py
