[project]
# 项目元数据与运行依赖；uv 会依据本节维护虚拟环境和 uv.lock。
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # SQLite 异步驱动，供 SQLAlchemy AsyncEngine 和 AsyncSession 使用。
    "aiosqlite>=0.22.1",
    # 数据库版本迁移工具，负责创建和演进表结构。
    "alembic>=1.18.5",
    # Web 框架及其 standard 运行依赖，包括 FastAPI CLI 和 Uvicorn。
    "fastapi[standard]>=0.139.1",
    # PostgreSQL 生产环境驱动；binary 变体便于部署，无需本机编译 libpq。
    "psycopg[binary]>=3.3.4",
    # 使用 Argon2 算法生成和验证密码哈希。
    "pwdlib[argon2]>=0.3.0",
    # 从 .env 与系统环境变量加载并校验 Settings。
    "pydantic-settings>=2.14.2",
    # JWT 编码与解码；不能替代密码哈希或 HTTPS。
    "pyjwt>=2.13.0",
    # ORM、Engine 和 Session 基础设施。
    "sqlalchemy>=2.0.51",
]

[tool.ruff]
# Ruff 只负责静态检查和格式约定；目标版本与项目 Python 版本保持一致。
line-length = 100
target-version = "py313"

[tool.ruff.format]
# 统一代码生成与格式化输出，减少不同编辑器造成的无关差异。
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
# 测试运行时把项目根目录加入模块搜索路径，使 tests 可以导入 app 包。
pythonpath = ["."]

[dependency-groups]
# 仅开发和测试需要的工具，不属于生产运行依赖。
dev = [
    "pytest>=9.1.1",
]
